mysql-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
